# hero-kill-game-client

./: .gitignore  .luarc.json  CMakeLists.txt  README.md  genfkver.sh  herokill.desktop  rebuild-and-run.sh  sync_local_db_to_remote.sh  sync_skill_treasure_descriptions.sh  waiting_tips.txt
.github/workflows/: build-all.yml  build-android.yml  build-mac.yml  build-windows.yml  check-white-space.yml
android/: AndroidManifest.xml  copy_assets.sh
android/res/values/: strings.xml
android/src/org/notify/HeroKill/: Helper.java
distro/archlinux/: PKGBUILD.template  mkfksource.sh
distro/nixos/: flake.nix
docs/: CLIENT_SERVER_COMMUNICATION.md  LUA_DEBUG_LOGS.md  POPUP_GUIDE.md
src/: CMakeLists.txt  freekill.cpp  herokill.cpp  herokill.h  main.cpp
src/client/: client.cpp  client.h  clientplayer.h  replayer.cpp  update_client.cpp  update_client.h
src/core/: packman.cpp  packman.h  path_resolver.h  player.cpp  player.h  util.cpp
src/network/: admin_service_proxy.cpp  admin_service_proxy.h  data_service_proxy.cpp  data_service_proxy.h  router.cpp
src/swig/: client.i  freekill.i  naturalvar.i  qt.i
src/ui/: qmlbackend.cpp  qmlbackend.h
test/: CMakeLists.txt  test_path_resolver.cpp
